    symbols from static archives.  The format is not stable between
    compiler versions.  Thanks to Matthias Klose for the
    suggestion and for providing the exact options.
    (Closes: #939656)
  * dh: Tweak the command-skipping optimization to skip commands
    in a few more cases when the command is known not to react to
    command line options.

  [ Nicholas Guriev ]
  * cmake: Verbose autogen rules.
  * cmake: Skip install all dependency with compatibility level 13 and
    above.

  [ Translations ]
  * Update German translation (Chris Leick)  (Closes: #951917)

 -- Niels Thykier <niels@thykier.net>  Sat, 01 Feb 2020 08:58:04 +0000

debhelper (12.9) unstable; urgency=medium

  [ Niels Thykier ]
  * debhelper.7: Clarify how DH_OPTIONS works and that some
    third-party tools may ignore it if they do not support
    it.  Thanks to Andrej Shadura for reporting the issue
    over IRC.
  * doc/PROGRAMMING: Introduce a section on the NOOP PROMISE
    comment.
  * dh: In compat 13, skip calls to hook and override targets
    for dh_auto_test, dh_dwz and dh_strip.  Thanks to
    Mike Hommey for suggesting it.  (Closes: #568897)
  * Dh_Getopt.pm: Remove support for "--ignore".  No package
    uses it any more.  For most parts, it has been replaced
    by the "3.0 (quilt)" source format.
  * debian/changelog: Clarify that substitutions change in
    12.8 only apply to the maintscript file (and not
    maintainer scripts) for dh_installdeb.
  * debhelper.7: Improve text in compat 13 section.
  * autoconf.pm: Only consider "configure" as an autoconf
    script if it is a file (and not a directory).  Thanks to
    Andrius Merkys for reporting the bug and providing a
    patch.  (Closes: #949396)
  * debian/control: Bump Standards-Version to 4.5.0 - no
    changes required.
  * dh_shlibdeps: Pass "--" in front of filenames passed to
    file(1).  Thanks to Christoph Biedl for the suggestion.
    (Closes: #949538)
  * dh_strip: Ditto