@@ -83,7 +83,7 @@ maintainer scripts.
 
 =cut
 
-# PROMISE: DH NOOP WITHOUT tmp(usr/lib/systemd/user) user.service
+# PROMISE: DH NOOP WITHOUT internal(bug#950723) tmp(usr/lib/systemd/user) user.service
 
 init(options => {
 	"no-enable" => \$dh{NO_ENABLE},
